Update kaboom import

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Rouky Jump</title>
   </head>
   <body>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="main.js"></script>
     <noscript>Sorry, you need JavaScript to play Rouky Jump!</noscript>
   </body>
 </html>
